@@ -1,6 +1,6 @@
 Package: EIEvent
-Version: 0.4-4
-Date: 2019/12/20
+Version: 0.4-5
+Date: 2020/01/16
 Title: Evidence Identification Event Processing Engine
 Author: Russell Almond
 Maintainer: Russell Almond <ralmond@fsu.edu>
